@@ -1,6 +1,7 @@
 PHP 4                                                                      NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, Version 4.3.6
+- Fixed bug #27719 (mktime issues on and around DST changeover). (Rasmus)
 - Fixed bug #27717 (Test Failures when compiled on 64-bit mode). (Ard, Derick)
 - Fixed bug #27687 (Bug Adding Default Charset to 'text/*' Content-Type 
   Header). (Marcus)
